tests/reference/asr-structs_07-83694b7.stderr
semantic error: Not enough arguments to S(), expected 2
 --> tests/errors/structs_07.py:9:12
  |
9 |     s: S = S(y=2)
  |            ^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
